--- a/README.rdoc
+++ b/README.rdoc
@@ -1,15 +1,15 @@
-= WHM_XML - A WHM XML API Wrapper for Ruby
+= WHM_JSON - A WHM JSON API Wrapper for Ruby
 
-{<img src="https://travis-ci.org/ivanoats/whm_xml_api_ruby.png" />}[http://travis-ci.org/ivanoats/whm_xml_api_ruby]
-{<img src="https://gemnasium.com/ivanoats/whm_xml_api_ruby.png" alt="Dependency Status" />}[https://gemnasium.com/ivanoats/whm_xml_api_ruby]
+{<img src="https://travis-ci.org/ivanoats/whm_json_api_ruby.png" />}[http://travis-ci.org/ivanoats/whm_json_api_ruby]
+{<img src="https://gemnasium.com/ivanoats/whm_json_api_ruby.png" alt="Dependency Status" />}[https://gemnasium.com/ivanoats/whm_json_api_ruby]
 
-This is a Ruby wrapper for the cPanel WHM XML-API interface. It will allow you to perform multiple functions available on your cPanel WHM server. For more information on the XML-API, see the cPanel website at http://twiki.cpanel.net/twiki/bin/view/AllDocumentation/AutomationIntegration/XmlApi.
+This is a Ruby wrapper for the cPanel WHM JSON-API interface. It will allow you to perform multiple functions available on your cPanel WHM server. For more information on the JSON-API, see the cPanel website at http://twiki.cpanel.net/twiki/bin/view/AllDocumentation/AutomationIntegration/JsonApi.
 
 == Requirements
 
 The following Ruby gems are required to be installed in order to make use this gem:
 
-xml-simple (>= 1.0.12)::      http://xml-simple.rubyforge.org
+json-simple (>= 1.0.12)::      http://json-simple.rubyforge.org
 activesupport (>= 2.3.2)::    http://as.rubyonrails.org
 curb (>= 0.3.2)::             http://curb.rubyforge.org
 validatable (>= 1.6.7)::      http://validatable.rubyforge.org
@@ -22,11 +22,11 @@ First off, you must have root access to a cPanel WHM server. With this gem, you 
 
 You can install this gem simply by doing the following:
 
-    $ gem install whm_xml
+    $ gem install whm_json
 
 You can also include it in a Rails project:
 
-    $ script/plugin install git://github.com/ivanoats/whm_xml_api_ruby.git
+    $ script/plugin install git://github.com/ivanoats/whm_json_api_ruby.git
 
 ==== Connecting
 
@@ -64,7 +64,7 @@ As of WHM version 11.24.2, these are the methods that are available via this gem
 == Authors and credits
 
 Authors::     Ivan Storck, Josh Delsman, Padraic McGee
-Home page::   http://github.com/ivanoats/whm_xml_api_ruby
+Home page::   http://github.com/ivanoats/whm_json_api_ruby
 
 == License
 
